--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue-datepicker": "^1.3.0",
     "vue-i18n": "^8.26.3",
     "vue-i18n-bridge": "^9.2.0-beta.10",
+    "vue-picture-input": "^3.0.1",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0",
